--- a/main.html
+++ b/main.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+<div> class="eg1">1</div>
+<div>class="eg2">2</div>
+<div>class="eg3">3</div>
+</div>
 </script>
 
 </body>
