--- a/main.html
+++ b/main.html
@@ -7,9 +7,11 @@
 </head>
 
 <body>
-<div> class="eg1">1</div>
-<div>class="eg2">2</div>
-<div>class="eg3">3</div>
+	<div class="container">
+	<div class="flexbox-container">	
+<div> class="item1">1</div>
+<div>class="item2">2</div>
+<div>class="item3">3</div>
 </div>
 </script>
 
