--- a/main.html
+++ b/main.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-	<div class="container">
-	<div class="flexbox-container">	
+	<div class="main">
 <div> class="item1">1</div>
 <div>class="item2">2</div>
 <div>class="item3">3</div>
