--- a/main.html
+++ b/main.html
@@ -1,19 +1,48 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+<style>
+.flex-container {
+  display: flex;
+}
 
+.flex-container>div {
+  background-color: green;
+  color: black;
+  width: 100px;
+  margin: 70px;
+  text-align: left;
+  line-height: 100px;
+  font-size: 50px;
+	}
+	.flex-container>div  {
+  background-color: red;
+  color: black;
+  width: 100px;
+  margin: 70px;
+  text-align: left;
+  line-height: 100px;
+  font-size: 50px;
+	}
+	.flex-container>div  {
+  background-color: blue;
+  color: black;
+  width: 100px;
+  margin: 70px;
+  text-align: left;
+  line-height: 100px;
+  font-size: 50px;
+	}
+</style>
+</head>
 <body>
-	<div class="main">
-<div> class="item1">1</div>
-<div>class="item2">2</div>
-<div>class="item3">3</div>
+<div class="flex-container">
+  <div style="order: 3">2</div>
+  <div style="order: 1">3</div>
+  <div style="order: 2">1</div> 
+  
 </div>
-</script>
 
 </body>
-
 </html>
+
